infra/stacks/network/template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: |
  CloudShortener - Network Stack
  VPC, subnets, gateways, route tables, security groups, and cache subnet group.

Parameters:
  AppName:
    Type: String
    Default: cloudshortener
    Description: Application name

  AppEnv:
    Type: String
    AllowedValues:
      - local
      - dev
      - staging
      - prod
    Default: local
    Description: Application environment

  ElastiCachePort:
    Type: Number
    Default: 6379
    Description: ElastiCache Redis port

Resources:
  ##################################################
  # VPC & Internet Gateway
  ##################################################
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: !Sub ${AppName}-${AppEnv}-vpc

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  VpcIgwAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref Vpc
      InternetGatewayId: !Ref InternetGateway

  ##################################################
  # Public Subnet & Routing
  ##################################################
  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select
        - 0
        - !GetAZs ''
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${AppName}-${AppEnv}-public-a

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: VpcIgwAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetARouteAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetA
      RouteTableId: !Ref PublicRouteTable

  ##################################################
  # NAT Gateway
  ##################################################
  NatEip:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatEip.AllocationId
      SubnetId: !Ref PublicSubnetA

  ##################################################
  # Private Subnets
  ##################################################
  PrivateSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select
        - 0
        - !GetAZs ''
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${AppName}-${AppEnv}-private-a

  PrivateSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select
        - 1
        - !GetAZs ''
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${AppName}-${AppEnv}-private-b

  ##################################################
  # Private Route Tables
  ##################################################
  PrivateRouteTableA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc

  PrivateRouteTableB:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc

  PrivateDefaultRouteA:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTableA
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  PrivateDefaultRouteB:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTableB
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  PrivateSubnetARouteAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetA
      RouteTableId: !Ref PrivateRouteTableA

  PrivateSubnetBRouteAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetB
      RouteTableId: !Ref PrivateRouteTableB

  ##################################################
  # Security Groups
  ##################################################
  LambdaSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Lambda egress within VPC
      VpcId: !Ref Vpc
      SecurityGroupEgress:
        - IpProtocol: '-1'
          CidrIp: 0.0.0.0/0

  ElastiCacheSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow Lambda connectivity to Redis
      VpcId: !Ref Vpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: !Ref ElastiCachePort
          ToPort: !Ref ElastiCachePort
          SourceSecurityGroupId: !Ref LambdaSecurityGroup

  ##################################################
  # ElastiCache Subnet Group
  ##################################################
  CacheSubnetGroup:
    Type: AWS::ElastiCache::SubnetGroup
    Properties:
      Description: Private subnets for ElastiCache
      SubnetIds:
        - !Ref PrivateSubnetA
        - !Ref PrivateSubnetB

Outputs:
  VpcId:
    Description: VPC ID
    Value: !Ref Vpc

  PublicSubnetA:
    Description: Public Subnet A ID
    Value: !Ref PublicSubnetA

  PrivateSubnetA:
    Description: Private Subnet A ID
    Value: !Ref PrivateSubnetA

  PrivateSubnetB:
    Description: Private Subnet B ID
    Value: !Ref PrivateSubnetB

  LambdaSecurityGroupId:
    Description: Security Group ID for Lambda functions
    Value: !Ref LambdaSecurityGroup

  ElastiCacheSecurityGroupId:
    Description: Security Group ID for ElastiCache
    Value: !GetAtt ElastiCacheSecurityGroup.GroupId

  CacheSubnetGroupName:
    Description: ElastiCache Subnet Group name
    Value: !Ref CacheSubnetGroup
